<resources>
    <string name="app_name">EasyTest</string>
    <string name="network_detecting">Detecting network</string>
    <string name="please_wait">Please wait</string>
    <string name="failed">Failed</string>
    <string name="no_function">Stay tuned</string>
    <string name="settings">Settings</string>
    <string name="offline_mode">Offline Mode</string>
    <string name="general">General</string>
    <string name="home">Home</string>
    <string name="expanded">Expanded</string>
    <string name="collapsed">Collapsed</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <string name="ask_logout">Do you want to logout?</string>
    <string name="start_test">Start test</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
    <string name="congratulations">Congratulations!</string>
    <string name="sign_up_failed">Signup failed</string>
    <string name="email">Email</string>
    <string name="no_login">Not logged in</string>
    <string name="no_login_summary">After logging in, you can continue to write online, but you can still continue to write silently without logging in</string>
    <string name="success">Success</string>
    <string name="upload_success">Success. ID: %d</string>
    <string name="error">Encountered an error: %s</string>
    <string name="loading_sources">Loading sources</string>
    <string name="result_title">%s\' s result</string>
    <string name="result">Result</string>
    <string name="copy_id">Copy ID</string>
    <string name="result_query_summary">View my results</string>
    <string name="download_resources">Download resources</string>
    <string name="status">Current status: %s</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="source">Source</string>
    <string name="downloaded_files_path">The downloaded files are stored in external storage/Android/data/xyz.xfqlittlefan.easytest/files/</string>
    <string name="custom_source">Custom source</string>
    <string name="offline_result">Offline result</string>
    <string name="view_server_data">View server data</string>
    <string name="file_exists">File already exists, download again?</string>
    <string name="save_to_local">Save to local</string>
    <string name="upload">Upload to server</string>
    <string name="online_result">Online result</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_error">Unknown error</string>
    <string name="account">Account</string>
    <string name="test">Test</string>
    <string name="select_question_bank">Select question bank</string>
    <string name="one_per_line">One per line</string>
    <string name="question_bank_icon">Question bank icon</string>
    <string name="your_answer">Your answer</string>
    <string name="question_number">Question %d</string>
    <string name="submit">Submit</string>
    <string name="start">Start</string>
    <string name="wrong_questions">Wrong question(s)</string>
    <string name="score">Score</string>
    <string name="no_points">No points</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="half_correct">Half correct</string>
    <string name="scoring">Scoring</string>
    <string name="ask_answer_correct">Is your answer correct?</string>
    <string name="about_to_exit">About to exit</string>
    <string name="answer">Answer</string>
    <string name="not_found">Not found</string>
    <string name="refresh">Refresh</string>
    <string name="theme">Theme</string>
    <string name="theme_color">Theme color</string>
    <string name="theme_color_summary">Color that appears most frequently in the app</string>
    <string name="start_test_summary">Start a journey</string>
    <string name="account_summary_no_logged_in">No logged in</string>
    <string name="account_summary">View my account</string>
    <string name="coming_soon">Coming soon</string>
    <string name="enable_blur">Enable blur effect</string>
    <string name="enable_blur_summary">Allow blur effect to be enabled in some scenes</string>
    <string name="previous">Previous</string>
    <string name="exit_testing_summary">Your answer will not be saved</string>
    <string name="exit">Exit</string>
    <string name="scoring_hint">Your score (0 ~ %f)</string>
    <string name="score_chip">%1$s (%2$s, %3$.1f / %4$.1f)</string>
    <string name="total_score">Total score (%1$.1f / %2$.1f)</string>
    <string name="back">Back</string>
    <string name="query">Query</string>
    <string name="expand_options">Expand options</string>
    <string name="collapse_options">Collapse options</string>
    <string name="cloud_result">Cloud result</string>
    <string name="result_question_state">Question %1$d (%2$s, %3$.1f / %4$.1f)</string>
    <string name="expand_details">Expand details</string>
    <string name="collapse_details">Collapse details</string>
    <string name="icon">Icon</string>
    <string name="checked">Checked</string>
    <string name="unchecked">Unchecked</string>
    <string name="nickname">Nickname</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_follow_system">Follow system</string>
    <string name="dark_theme_on">On</string>
    <string name="dark_theme_off">Off</string>
</resources>
