<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/previous"
        android:icon="@drawable/ic_baseline_arrow_back_24"
        android:showAsAction="always"
        android:title="@string/previous"
        android:visible="false" />
    <item
        android:id="@+id/next"
        android:icon="@drawable/ic_baseline_arrow_forward_24"
        android:showAsAction="always"
        android:title="@string/next"
        android:visible="false" />
    <item
        android:id="@+id/result"
        android:icon="@drawable/ic_baseline_assignment_24"
        android:showAsAction="ifRoom"
        android:title="@string/result"
        android:visible="false" />
    <item
        android:id="@+id/submit"
        android:icon="@drawable/ic_baseline_done_24"
        android:showAsAction="ifRoom"
        android:title="@string/submit"
        android:visible="false" />

</menu>